fix: core client fronend

--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/FilterModal.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/FilterModal.razor
@@ -1,5 +1,4 @@
-﻿@using EShop.WebApp.Core.Services.CatalogService
-@using EShop.WebApp.Services.CatalogService
+﻿@using EShop.WebApp.Services.CatalogService
 
 @inject ICatalogService CatalogService
 
