--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <a href="@($"/detail/{ProductData.Id}")" class="text-gray-900 text-lg font-semibold leading-tight hover:underline dark:text-white">
+        <a href="@($"/products/{ProductData.Id}")" class="text-gray-900 text-lg font-semibold leading-tight hover:underline dark:text-white">
             @ProductData.Name
         </a>
 
