--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Cart.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Cart.razor
@@ -3,6 +3,7 @@
 @using EShop.Shared.RequestModels.Common
 @using EShop.Shared.ResponseModels.Basket
 @using EShop.WebApp.Components.Order
+@using EShop.WebApp.Core
 @using EShop.WebApp.Services.BasketService
 
 @inject IBasketService BasketService
