--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/Register.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/Register.razor
@@ -3,10 +3,11 @@
 @layout EmptyLayout
 
 @using EShop.Shared.RequestModels.Identity
+@using EShop.WebApp.Core
 @using EShop.WebApp.Models.Common
 @using EShop.WebApp.Models.Enums
-@using EShop.WebApp.States
 @using EShop.WebApp.Services.IdentityService
+@using EShop.WebApp.States
 
 @inject AlertState AlertState
 @inject IIdentityService IdentityService
