--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/SignIn.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/SignIn.razor
@@ -1,8 +1,9 @@
 ﻿@page "/sign-in"
 
 @using EShop.Shared.RequestModels.Identity
-@using EShop.WebApp.Models.Enums
+@using EShop.WebApp.Core
 @using EShop.WebApp.Models.Common
+@using EShop.WebApp.Models.Enums
 @using EShop.WebApp.Services.IdentityService
 @using EShop.WebApp.States
 @using EShop.WebApp.States.AuthState
