--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
@@ -21,7 +21,7 @@
 
             <div class="mt-6 sm:mt-8">
                 <div class="border-gray-200 relative overflow-x-auto border-b dark:border-gray-800">
-                    <SummaryTable />
+                    <ShortDescriptionTable />
                 </div>
 
                 <div class="mt-4 space-y-6">
