--- a/src/WebApp/Components/Product/ProductCart.razor
+++ b/src/WebApp/Components/Product/ProductCart.razor
@@ -4,9 +4,9 @@
     <div class="h-56 w-full">
         <a href="@($"/products/{ProductData.Id}")">
             <img class="mx-auto h-full dark:hidden"
-                 src="@ProductData.ImageUrl" alt="" />
+                 src="@ProductData.ThumbnailUrl" alt="" />
             <img class="mx-auto hidden h-full dark:block"
-                 src="@ProductData.ImageUrl" alt="" />
+                 src="@ProductData.ThumbnailUrl" alt="" />
         </a>
     </div>
     <div class="pt-6">
@@ -16,7 +16,7 @@
             </span>
 
             <div class="gap-1 flex items-center justify-end">
-                <button  type="button" data-tooltip-target="tooltip-quick-look"
+                <button type="button" data-tooltip-target="tooltip-quick-look"
                         class="p-2 text-gray-500 rounded-lg hover:bg-gray-100 hover:text-gray-900 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                     <span class="sr-only"> Quick look </span>
                     <svg class="h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -60,8 +60,8 @@
                 <Rating Max="5" ValueStar="Convert.ToInt32(ProductData.Star)"></Rating>
             </div>
 
-            <p class="text-gray-900 text-sm font-medium dark:text-white">@ProductData.Star</p>
-            <p class="text-gray-500 text-sm font-medium dark:text-gray-400">(@ProductData.ReviewsCount)</p>
+            <p class="text-gray-900 text-sm font-medium dark:text-white">@ProductData.RatingAverage</p>
+            <p class="text-gray-500 text-sm font-medium dark:text-gray-400">(@ProductData.ReviewCount)</p>
         </div>
 
         <ul class="mt-2 gap-4 flex items-center">
