feat: jwt token

--- a/src/WebApp/App.razor
+++ b/src/WebApp/App.razor
@@ -11,7 +11,7 @@
                     <text>Please wait, we are authorizing you...</text>
                 </Authorizing>
                 <NotAuthorized>
-                    <SignIn></SignIn>
+                    <Login></Login>
                 </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
