--- a/src/WebApp/Components/Common/Breadcrumb.razor
+++ b/src/WebApp/Components/Common/Breadcrumb.razor
@@ -1,4 +1,4 @@
-﻿@using EShop.WebApp.Models.Common
+﻿@using WebApp.Models.Common
 
 <nav class="flex" aria-label="Breadcrumb">
     <ol class="space-x-1 inline-flex items-center rtl:space-x-reverse md:space-x-2">
