--- a/src/WebApp/Layout/Mainlayout/NavMenu.razor
+++ b/src/WebApp/Layout/Mainlayout/NavMenu.razor
@@ -180,6 +180,6 @@
 
     private async Task SignOutHandler()
     {
-        await AccountManagement.SignOut();
+        await AccountManagement.Logout();
     }
 }
