--- a/src/WebApp/Pages/Home.razor
+++ b/src/WebApp/Pages/Home.razor
@@ -94,7 +94,7 @@
 
                                         <div class="d-flex justify-content-around mt-2">
                                             <Rating Max="5" Star="@((int)product.RatingAverage)"></Rating>
-                                            <CardSubTitle>Total Buyer :@product.TotalBuyer</CardSubTitle>
+                                            <CardSubTitle>Buyer :@product.TotalBuyer</CardSubTitle>
                                         </div>
 
                                         <CardSeparator></CardSeparator>
