--- a/src/WebApp/Pages/User/Register.razor
+++ b/src/WebApp/Pages/User/Register.razor
@@ -1,11 +1,10 @@
 ﻿@page "/register"
 
 @layout EmptyLayout
-
-@using EShop.WebApp.Models.Common
 @using EShop.WebApp.Models.Enums
 @using EShop.WebApp.States
 @using WebApp.Core.RequestModels
+@using WebApp.Models.Common
 @using WebApp.Services.IdentityService
 
 @inject AlertState AlertState
